# EjerciciosModulo3

./: .gitignore  ejercicio_1.py  ejercicio_10.py  ejercicio_11.py  ejercicio_12.py  ejercicio_13.py  ejercicio_14.py  ejercicio_15.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_5.py  ejercicio_6.py  ejercicio_7.py  ejercicio_8.py  ejercicio_9.py  main.py  pyproject.toml  tareas.txt
tests/: test_ejercicio_1.py  test_ejercicio_10.py  test_ejercicio_11.py  test_ejercicio_12.py  test_ejercicio_13.py  test_ejercicio_14.py  test_ejercicio_15.py  test_ejercicio_2.py  test_ejercicio_3.py  test_ejercicio_4.py  test_ejercicio_5.py  test_ejercicio_6.py  test_ejercicio_7.py  test_ejercicio_8.py  test_ejercicio_9.py
