[project]
name = "ejerciciosmodulo3"
version = "0.1.0"
description = "Ejercicios del Módulo 3"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "rich>=14.2.0",
]
testpaths = "tests"

[tool.uv.dependencies]
pytest = "*"
ruff = "*"
rich = "*"

[tool.ruff]
select = ["E", "F", "W"]
ignore = []
line-length = 88
target-version = "py310"
